Fix size and spacing of boxes of services

--- a/source/stylesheets/components/_services.css
+++ b/source/stylesheets/components/_services.css
@@ -7,4 +7,13 @@
 }
 
 .Services .Services-service {
+  flex: 1;
+}
+
+.Services .Services-service + * {
+  margin-left: var(--spacer-3);
+}
+
+.Services .Services-service img {
+  width: 100%;
 }
